# financial-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: auto-merge.yml
agents/: cfa_notes.md  quant_research_prompt_v2.md
agents/daily_investment_system/: agents.md  main.md  rules.md  runbook.md  technical_indicators.py
agents/equity/: optimized_equity_forecasting_prompt.md
agents/equity/daily_investment_system/: agents.md  build_index_universe.py  factor_scoring.py  fundamental_diagnostics.py  main.md  rules.md  runbook.md  sentiment_diagnostics.py  settlement_ledger.py
agents/equity/plan/: 2026-07-15-claude-fable-5-top-priority.md
agents/equity/turtle-trader/: .gitignore  SKILL.md  plan.md
agents/output/: comprehensive_analysis_2026-07-04.md  daily_output_spec.md  daily_schedule.md  model_comparison_2026-07-04.md
agents/output/claude-fable-5-2026-06-10/: 00_run_manifest.md  01_preflight.md  03_regime_and_data.md  04_universe_summary.md  08_risk_review.md  09_final_report.md  10_midday_monitor.md  12_close_log.md  13_evolution_log.md
agents/output/claude-fable-5-2026-07-01/: 00_run_manifest.md  01_preflight.md  02_reflection.md  04_universe_summary.md  05_factor_scores.md  06_top_candidates.md  07_portfolio_proposal.md  11_preclose_check.md  13_evolution_log.md  14_weekly_review.md  16_monthly_review.md  universe_summary.json
agents/output/claude-fable-5-2026-07-02/: 01_preflight.md  05_factor_scores.md  07_portfolio_proposal.md  08_risk_review.md  09_final_report.md  10_midday_monitor.md  11_preclose_check.md  14_weekly_review.md  15_predictions.json  universe_summary.json
agents/output/claude-fable-5-2026-07-03/: 00_run_manifest.md  01_preflight.md  08_risk_review.md  10_midday_monitor.md  11_preclose_check.md  12_close_log.md  13_evolution_log.md  16_monthly_review.md  technical_indicators.json  universe_summary.json
agents/output/claude-fable-5-2026-07-04/: 00_run_manifest.md  01_preflight.md  02_reflection.md  03_regime_and_data.md  04_universe_summary.md  06_top_candidates.md  08_risk_review.md  09_final_report.md  10_midday_monitor.md  13_evolution_log.md  16_monthly_review.md  universe_summary.json
agents/output/claude-fable-5-2026-07-05/: 00_run_manifest.md  01_preflight.md  02_reflection.md  03_regime_and_data.md  04_universe_summary.md  05_factor_scores.md  08_risk_review.md  09_final_report.md  11_preclose_check.md  12_close_log.md  13_evolution_log.md  technical_indicators.json
agents/output/claude-fable-5-2026-07-06/: 00_run_manifest.md  01_preflight.md  02_reflection.md  05_factor_scores.md  06_top_candidates.md  07_portfolio_proposal.md  08_risk_review.md  11_preclose_check.md  13_evolution_log.md  14_weekly_review.md  15_predictions.json  technical_indicators.json
agents/output/claude-fable-5-2026-07-07/: 02_reflection.md  04_universe_summary.md  05_factor_scores.md  06_top_candidates.md  10_midday_monitor.md  11_preclose_check.md  12_close_log.md  14_weekly_review.md  16_monthly_review.md  technical_indicators.json  universe_summary.json
agents/output/claude-fable-5-2026-07-08/: 03_regime_and_data.md  06_top_candidates.md  07_portfolio_proposal.md  08_risk_review.md  12_close_log.md  13_evolution_log.md  14_weekly_review.md  technical_indicators.json  universe_summary.json
agents/output/claude-opus-4-6-2026-03-16/: 09_midday_monitor.md
agents/output/claude-opus-4-6-20260316-142320/: 01_preflight.md  08_final_report.md
agents/output/claude-opus-4-7-2026-05-12/: 02_regime_and_data.md  04_factor_scores.md
agents/output/claude-opus-4-7-2026-05-24/: 10_preclose_check.md
agents/output/gpt-5-2026-03-16/: 07_risk_review.md  (+3 more)
agents/prompt/: main.md  quant_research_prompt_v2.md
agents/turtle-trader/: requirements.txt  turtle.py
example/: __init__.py
example/rl/: acrobot_example.py  basic_rl_example.py  cartpole_example.py  mountain_car_example.py  run_all_examples.py
notebooks/: LSTM_prediction.ipynb  rl_portfolio_trading.ipynb  rl_portfolio_trading_phase2.ipynb
plan/: 2026-07-15-canonical-settlement-ledger.md
pure_prompt_coding/equity/: investment_principle.md
scripts/: demo_grok_workflow.py
src/core_trading/: LSTM_prediction.ipynb  gpu_config.py  rl_portfolio_trading.ipynb  rl_portfolio_trading_phase2.ipynb  rl_portfolio_trading_phase2_copy.ipynb  setup_gpu_for_notebooks.py
src/financial_agent/: __init__.py
src/rl/: agent.py  environment.py  trainer.py
(+1246 files in other folders)
