[project]
name = "financial-agent"
version = "0.1.0"
description = "A reinforcement learning framework for financial agents"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "gymnasium==1.2.1",
    "black==25.9.0",
    "click==8.3.0",
    "mypy==1.18.2",
    "pyparsing==3.2.5",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
    "keras-nightly>=3.12.0.dev2025092903",
    "tensorflow>=2.20.0",
    "ipython>=9.5.0",
    "notebook>=7.4.7",
    "yfinance>=0.2.66",
    "beautifulsoup4==4.14.2",
    "stockstats>=0.6.5",
    "stable-baselines3>=2.7.0",
    "pyfolio-reloaded>=0.9.9",
    "pandas-stubs==2.3.2.250926",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
