[project]
name = "financial-agent"
version = "0.1.0"
description = "A reinforcement learning framework for financial agents"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib",
    "gymnasium",
    "black",
    "click",
    "mypy",
    "pyparsing",
    "pandas",
    "seaborn",
    "scikit-learn",
    "keras-nightly",
    "tensorflow",
    "ipython",
    "notebook",
    "yfinance",
    "beautifulsoup4",
    "stockstats",
    "stable-baselines3",
    "pyfolio-reloaded",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-custom-exit-code",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 200
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
